Edited Readme file

--- a/README
+++ b/README
@@ -4,5 +4,7 @@ The Learning Track
 
 If you are working on the repository please branch to keep the master code working and the merge code later when your branch is 100% working with no issues.
 
-This is so that everyone in the group has access to a working master code.
+This is so that everyone in the group has access to a working master code. Please read the documentation on the git-scm website
+
+Thanks everyone
 
